added validation for failed results backend
